--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,111 @@
-numpy
-matplotlib
-seaborn
-scikit-learn
-wordcloud
-nltk
-xgboost
-streamlit
-six
-apsscheduler
+altair==5.3.0
+amqp==5.2.0
+APScheduler==3.10.4
+arabic-reshaper==3.0.0
+asgiref==3.8.1
+asn1crypto==1.5.1
+attrs==23.2.0
+billiard==4.2.1
+blinker==1.8.2
+cachetools==5.4.0
+celery==5.4.0
+certifi==2024.7.4
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
+contourpy==1.2.1
+cron-descriptor==1.4.5
+cryptography==43.0.3
+cssselect2==0.7.0
+cycler==0.12.1
+diff-match-patch==20230430
+Django==5.0.7
+django-celery-beat==2.7.0
+django-filter==24.2
+django-import-export==4.1.1
+django-model-utils==5.0.0
+django-notifications-hq==1.8.3
+django-timezone-field==7.0
+et-xmlfile==1.1.0
+fonttools==4.53.1
+gitdb==4.0.11
+GitPython==3.1.43
+html5lib==1.1
+idna==3.7
+Jinja2==3.1.4
+joblib==1.4.2
+jsonfield==3.1.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
+kombu==5.4.2
+lxml==5.3.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.1
+mdurl==0.1.2
+nltk==3.8.1
+numpy==2.0.0
+openpyxl==3.1.5
+oscrypto==1.3.0
+packaging==24.1
+pandas==2.2.2
+pillow==10.4.0
+prompt_toolkit==3.0.48
+protobuf==5.27.2
+pyarrow==17.0.0
+pycparser==2.22
+pydeck==0.9.1
+Pygments==2.18.0
+pyHanko==0.25.3
+pyhanko-certvalidator==0.26.5
+pyparsing==3.1.2
+pypdf==5.1.0
+python-bidi==0.6.3
+python-crontab==3.2.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.2
+qrcode==8.0
+redis==5.2.0
+referencing==0.35.1
+regex==2024.5.15
+reportlab==4.2.5
+requests==2.32.3
+rich==13.7.1
+rpds-py==0.19.0
+scikit-learn==1.5.1
+scipy==1.14.0
+seaborn==0.13.2
+setuptools==75.3.0
+six==1.16.0
+smmap==5.0.1
+sqlparse==0.5.1
+streamlit==1.36.0
+svglib==1.5.1
+swapper==1.4.0
+tablib==3.5.0
+tenacity==8.5.0
+threadpoolctl==3.5.0
+tinycss2==1.4.0
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4.1
+tqdm==4.66.4
+typing_extensions==4.12.2
+tzdata==2024.1
+tzlocal==5.2
+uritools==4.0.3
+urllib3==2.2.2
+vine==5.1.0
+watchdog==4.0.1
+wcwidth==0.2.13
+webencodings==0.5.1
+wordcloud==1.9.3
+xgboost==2.1.0
+xhtml2pdf==0.2.16
