--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ et-xmlfile==1.1.0
 fonttools==4.53.1
 gitdb==4.0.11
 GitPython==3.1.43
+greenlet==3.1.1
 gunicorn==23.0.0
 html5lib==1.1
 idna==3.7
@@ -90,6 +91,7 @@ seaborn==0.13.2
 setuptools==75.3.0
 six==1.16.0
 smmap==5.0.1
+SQLAlchemy==2.0.36
 sqlparse==0.5.1
 streamlit==1.36.0
 svglib==1.5.1
