--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,14 @@
 services:
-  - name: feedback-and-evaluation-system
-    startCommand: |
+  - type: web
+    name: feedback-and-evaluation-system
+    env: python
+    buildCommand: |
       pip install -r requirements.txt
-      bash build.sh
+      bash build.sh  # If this is needed for static files or other setup
+    startCommand: |
+      gunicorn Feedbacksystem.wsgi:application --bind 0.0.0.0:$PORT
+  - type: worker
+    name: apscheduler-worker
+    env: python
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "python manage.py run_scheduler"
