--- a/requirements.txt
+++ b/requirements.txt
@@ -34,12 +34,15 @@ django-model-utils==5.0.0
 django-notifications-hq==1.8.3
 django-timezone-field==7.0
 et-xmlfile==1.1.0
+filelock==3.16.1
 fonttools==4.53.1
+fsspec==2024.12.0
 gitdb==4.0.11
 GitPython==3.1.43
 greenlet==3.1.1
 gunicorn==23.0.0
 html5lib==1.1
+huggingface-hub==0.27.1
 idna==3.7
 Jinja2==3.1.4
 joblib==1.4.2
@@ -53,6 +56,8 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.9.1
 mdurl==0.1.2
+mpmath==1.3.0
+networkx==3.4.2
 nltk==3.8.1
 numpy==2.0.0
 openpyxl==3.1.5
@@ -85,9 +90,11 @@ reportlab==4.2.5
 requests==2.32.3
 rich==13.7.1
 rpds-py==0.19.0
+safetensors==0.5.2
 scikit-learn==1.5.1
 scipy==1.14.0
 seaborn==0.13.2
+sentencepiece==0.2.0
 setuptools==75.3.0
 six==1.16.0
 smmap==5.0.1
@@ -96,14 +103,18 @@ sqlparse==0.5.1
 streamlit==1.36.0
 svglib==1.5.1
 swapper==1.4.0
+sympy==1.13.1
 tablib==3.5.0
 tenacity==8.5.0
 threadpoolctl==3.5.0
 tinycss2==1.4.0
+tokenizers==0.21.0
 toml==0.10.2
 toolz==0.12.1
+torch==2.5.1
 tornado==6.4.1
 tqdm==4.66.4
+transformers==4.48.0
 typing_extensions==4.12.2
 tzdata==2024.1
 tzlocal==5.2
